# DecryptTruck

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build-app.yml  run_test.yml
src/: lib.rs  main.rs
src/decoder/: bsii_decoder.rs  bsii_serializer.rs  load_data_block.rs
src/strucs/: data_sii.rs
src/utils/: aes.rs  decode_utils.rs  file_operations.rs  file_type.rs  mod.rs  serialize.rs  zlib.rs
tests/: decrypt_bin_file_test.rs
tests/test_data/encrypted_sig/: game_with_mod.sii  game_with_mod_2.sii
