[package]
name = "decrypt_truck"
version = "1.3.2"
edition = "2021"
description = "Decrypt your saves in the ATS and ETS 2 games with this quick little utility rewritten in Rust"
license = "MIT"
authors = ["SiberianCoffe <siberiancoffe@outlook.cl>"]
repository = "https://github.com/CoffeSiberian/DecryptTruck"
homepage = "https://github.com/CoffeSiberian/DecryptTruck"
readme = "README.md"

[lib]
name = "decrypt_truck"
path = "src/lib.rs"

[[bin]]
name = "decrypt_truck"
path = "src/main.rs"

[dependencies]
aes = "0.8.4"
cbc = "0.1.2"
cipher = { version = "0.4.4", features = ["block-padding"] }
flate2 = "1.0.35"
rayon = "1.10.0"

[build-dependencies]
winres = "0.1.12"
